Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18928

lnetctl net/peer set parses -h incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [root@s-lmo-gaz38b tests]# lnetctl net set -h
      net set: set local NI specific parameter
      	--nid: NI NID to set the value on
      	--net: network to set the value on (e.g. tcp, o2ib, kfi)
      	--lnd-timeout: set LND timeout (seconds) for LND used by --net argument
      	--health: specify health value to set
      	--conns-per-peer: number of connections per peer
      	--all: set all NIs value to the one specified
      
      set: invalid option -- 'h'
      net:
          - set:
                errno: -22
                descr: "Invalid option or missing argument"
      [root@s-lmo-gaz38b tests]#
      

      Attachments

        Activity

          People

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: