LU-18928 lnet: Fix lnetctl peer/net set help option

jt_set_peer/ni_value do not correctly check return value of
check_cmd() function. As a result they report an error when user
specified '-h' option.

Test-Parameters: trivial testlist=sanity-lnet
Fixes: 9b05e87248 ("LU-10391 lnet: support updating LNet local NI settings")
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: I7f55208b530a62e0c8bd14f1e50a36dba555f1a6
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58808
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>